--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,8 @@
 name = my_package
 
 [options]
-package_dir=codietpgm
+package_dir=
+    =codietpgm
 packages = find:
 zip_safe = False
 python_requires = >= 3
